kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: architecture-lab
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
